// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup should be rendered correctly 1`] = `
<DocumentFragment>
  <fieldset
    class="root uui-vertical-direction"
  >
    <label
      class="container root uui-size-18 uui-radio-input-container uui-color-primary -clickable"
    >
      <div
        class="uui-radioinput"
      >
        <input
          aria-checked="false"
          type="radio"
        />
      </div>
      <div
        class="uui-input-label"
      >
        Test1
      </div>
    </label>
    <label
      class="container root uui-size-18 uui-radio-input-container uui-color-primary -clickable"
    >
      <div
        class="uui-radioinput"
      >
        <input
          aria-checked="false"
          type="radio"
        />
      </div>
      <div
        class="uui-input-label"
      >
        Test2
      </div>
    </label>
  </fieldset>
</DocumentFragment>
`;

exports[`RadioGroup should be rendered correctly with props 1`] = `
<DocumentFragment>
  <fieldset
    class="root uui-horizontal-direction"
  >
    <label
      class="container uui-disabled root uui-size-18 uui-radio-input-container uui-color-primary"
    >
      <div
        class="uui-radioinput"
      >
        <input
          aria-checked="false"
          aria-disabled="true"
          disabled=""
          type="radio"
        />
      </div>
      <div
        class="uui-input-label"
      >
        Test1
      </div>
    </label>
    <label
      class="container uui-disabled root uui-size-18 uui-radio-input-container uui-color-primary"
    >
      <div
        class="uui-radioinput"
      >
        <input
          aria-checked="false"
          aria-disabled="true"
          disabled=""
          type="radio"
        />
      </div>
      <div
        class="uui-input-label"
      >
        Test2
      </div>
    </label>
  </fieldset>
</DocumentFragment>
`;
